Uploading image bug / message button on own product bug solved